hphp/test/slow/collection_classes/invalid-operations.php.expectf
object(HH\ImmVector)#%d (2) {
  [0]=>
  object(HH\Vector)#%d (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#%d (1) {
    [0]=>
    int(2)
  }
}
object(HH\ImmMap)#%d (2) {
  [0]=>
  object(HH\Vector)#%d (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#%d (1) {
    [0]=>
    int(2)
  }
}
object(HH\Pair)#%d (2) {
  [0]=>
  object(HH\Vector)#%d (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#%d (1) {
    [0]=>
    int(2)
  }
}

object(HH\ImmVector)#%d (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#%d (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#%d (1) {
      [0]=>
      int(2)
    }
  }
}
object(HH\ImmMap)#%d (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#%d (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#%d (1) {
      [0]=>
      int(2)
    }
  }
}
object(HH\Pair)#%d (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#%d (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#%d (1) {
      [0]=>
      int(2)
    }
  }
}

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot use [] with collections for reading in an lvalue context
Caught exception: Cannot use [] with collections for reading in an lvalue context
Caught exception: Cannot use [] with collections for reading in an lvalue context


Fatal error: Collection elements cannot be taken by reference in %s on line 174
